--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                         <a href="#" data-endpoint="/api/stalk/youtube">
                             <i class="fas fa-code code-icon"></i> Stalk YouTube
                         </a>
-                        <button class="try-it-button btn btn-primary" data-endpoint="/api/stalk/youtube">
+                        <button class="try-it-button btn btn-primary" data-endpoint="/api/stalk/youtube?username=wanzofc">
                             <i class="fas fa-flask"></i> Try It
                         </button>
                     </li>
