--- a/index.html
+++ b/index.html
@@ -312,18 +312,18 @@
 
                 <ul id="api-endpoints-list">
                     <li>
-                        <a href="#" data-endpoint="/api/stalk/github">
-                            <i class="fas fa-code code-icon"></i> Get GitHub User
+                        <a href="#" data-endpoint="/api/berita/antara">
+                            <i class="fas fa-code code-icon"></i> Get berita antara
                         </a>
-                        <button class="try-it-button btn btn-primary" data-endpoint="/api/stalk/github">
+                        <button class="try-it-button btn btn-primary" data-endpoint="/api/berita/antara">
                             <i class="fas fa-flask"></i> Try It
                         </button>
                     </li>
                     <li>
-                        <a href="#" data-endpoint="/api/d/tiktok">
-                            <i class="fas fa-code code-icon"></i> TikTok Downloader
+                        <a href="#" data-endpoint="/api/berita/cnbcindonesia">
+                            <i class="fas fa-code code-icon"></i> cnbcindonesia
                         </a>
-                        <button class="try-it-button btn btn-primary" data-endpoint="/api/d/tiktok">
+                        <button class="try-it-button btn btn-primary" data-endpoint="/api/berita/cnbcindonesia">
                             <i class="fas fa-flask"></i> Try It
                         </button>
                     </li>
