--- a/index.html
+++ b/index.html
@@ -335,12 +335,19 @@
         <div class="col-md-4">
             <div id="api-key-container" class="container">
                 <h2 class="container-title">Account</h2>
-                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#signupModal">
-                    Sign Up
-                </button>
-                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#signinModal">
-                    Sign In
-                </button>
+                <div id="auth-buttons">
+                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#signupModal">
+                        Sign Up
+                    </button>
+                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#signinModal">
+                        Sign In
+                    </button>
+                </div>
+                <div id="user-info" style="display: none;">
+                    <p>Selamat datang, <span id="username-display"></span>!</p>
+                    <p>API Key Anda: <span id="api-key-display"></span></p>
+                    <button id="logout-button" class="btn btn-danger">Logout</button>
+                </div>
             </div>
         </div>
     </div>
@@ -498,12 +505,58 @@
         const signupEmailInput = $('#signupEmail');
         const signupUsernameInput = $('#signupUsername');
         const signupPasswordInput = $('#signupPassword');
+        const authButtons = $('#auth-buttons');
+        const userInfo = $('#user-info');
+        const usernameDisplay = $('#username-display');
+        const apiKeyDisplay = $('#api-key-display');
+        const logoutButton = $('#logout-button');
 
         // Error message elements
         const signupEmailError = $('#signupEmailError');
         const signinForm = $('#signinForm');
         const signinUsernameInput = $('#signinUsername');
         const signinPasswordInput = $('#signinPassword');
+        // Function to check login status and update UI
+        function checkLoginStatus() {
+        const token = localStorage.getItem('token');
+        const username = localStorage.getItem('username');
+        const apiKey = localStorage.getItem('apiKey');
+
+        if (token && username && apiKey) {
+            // User is logged in
+            authButtons.hide();
+            userInfo.show();
+            usernameDisplay.text(username);
+            apiKeyDisplay.text(apiKey);
+            // You might also want to fetch and display user-specific data here
+        } else {
+            // User is not logged in
+            authButtons.show();
+            userInfo.hide();
+        }
+    }
+
+    // Call checkLoginStatus when the page loads
+    checkLoginStatus();
+
+    // Logout Functionality
+    logoutButton.on('click', function () {
+        // Remove items from localStorage
+        localStorage.removeItem('token');
+        localStorage.removeItem('username');
+        localStorage.removeItem('apiKey');
+
+        // Update UI
+        checkLoginStatus();
+
+        // Optionally, show a logout success message
+        Swal.fire({
+            title: 'Logged Out!',
+            text: 'You have been successfully logged out.',
+            icon: 'success',
+            confirmButtonText: 'OK'
+        });
+    });
 
         // Data endpoints (Ganti dengan data API endpoint yang sebenarnya)
         const endpointsData = [
@@ -728,6 +781,10 @@
             data: JSON.stringify({username: username, password: password}),
             success: function (response) {
                 if (response.success) {
+                      // Store user data in localStorage
+                    localStorage.setItem('token', response.token);
+                    localStorage.setItem('username', username); // Store the username
+                    localStorage.setItem('apiKey', response.apiKey);
                      Swal.fire({
                         title: 'Success!',
                         text: 'Login berhasil.',
@@ -736,7 +793,10 @@
                     }).then(() => {
                         $('#signinModal').modal('hide');
                         signinForm[0].reset();
-                        apiKeyDisplay.text(`API Key: ${response.apiKey}`); // Menampilkan API key setelah login
+                       // Update UI based on login status
+                        checkLoginStatus();
+
+
                     });
                 } else {
                     Swal.fire({
@@ -837,7 +897,7 @@
                 "onclick": {
                     "enable": true,
                     "mode": "push"
-                },
+                                },
                 "resize": true
             },
             "modes": {
