--- a/index.html
+++ b/index.html
@@ -1,42 +1,189 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WANZOFC TECH API Documentation</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/swagger-ui/4.15.0/swagger-ui.min.css" integrity="sha512-YYZ2J8E08uBqSdx0y2n6FmN9a4V0O710zQo+T4xHw6I4K538c7uE1g+L8E04D5JpB9z7x1mK92QnL+55sU0Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <title>WANZOFC TECH API</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <style>
         body {
-            margin: 0;
-            padding: 0;
+            background-color: #0d1117;
+            color: #c6c6c6;
+            font-family: 'Roboto', sans-serif;
+            overflow-x: hidden;
         }
 
-        #swagger-ui {
-            height: 100vh; /* Make the Swagger UI container take up the full viewport height */
+        a {
+            color: #58a6ff;
+        }
+
+        a:hover {
+            color: #8ec0ff;
+            text-decoration: none;
+        }
+
+        .jumbotron {
+            background-color: #161b22;
+            border-bottom: 1px solid #30363d;
+            padding: 3rem 1rem;
+            text-align: center;
+        }
+
+        .card {
+            background-color: #161b22;
+            border: 1px solid #30363d;
+            transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+        }
+
+        .card:hover {
+            transform: translateY(-8px);
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.6);
+        }
+
+        .btn-primary {
+            background-color: #238636;
+            border-color: #238636;
+            transition: background-color 0.3s ease;
+        }
+
+        .btn-primary:hover {
+            background-color: #2ea043;
+            border-color: #2ea043;
+        }
+
+        ul {
+            list-style: none;
+            padding-left: 0;
+        }
+
+        ul li {
+            margin-bottom: 8px;
+        }
+
+        ul li a {
+            display: block;
+            padding: 10px 15px;
+            background-color: #161b22;
+            border: 1px solid #30363d;
+            border-radius: 5px;
+            transition: background-color 0.3s ease, transform 0.2s ease;
+        }
+
+        ul li a:hover {
+            background-color: #30363d;
+            transform: translateX(5px);
         }
     </style>
 </head>
+
 <body>
 
-    <div id="swagger-ui"></div>
+    <div class="container mt-5">
+        <div class="jumbotron text-center">
+            <h1 class="display-4 animate__animated animate__fadeInDown">WANZOFC TECH API</h1>
+            <p class="lead animate__animated animate__fadeInUp animate__delay-1s">Platform Canggih untuk AI dan Tools</p>
+            <hr class="my-4">
+            <p class="animate__animated animate__fadeIn animate__delay-2s">
+                Dokumentasi API lengkap tersedia di <a href="/api-docs">Swagger UI</a>.
+            </p>
+            <a class="btn btn-primary btn-lg animate__animated animate__fadeIn animate__delay-2s" href="/api-docs" role="button">Lihat Dokumentasi <i class="fas fa-external-link-alt"></i></a>
+        </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/swagger-ui/4.15.0/swagger-ui-bundle.js" integrity="sha512-V2G5l0t0vT4oK2632L4jK+p6wS/sJtQ6+r286Q7mO53O4p/8eQcEw/iXQ1o1nL/9Y5QzW3C92m53c1j4a7w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <h2 class="mt-4 animate__animated animate__fadeIn">Endpoint Unggulan</h2>
+
+        <div class="row">
+            <div class="col-md-4 mb-4 animate__animated animate__fadeInUp">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Deepseek Chat AI</h5>
+                        <p class="card-text">Berinteraksi dengan AI menggunakan Deepseek Chat.</p>
+                        <a href="/api/ai/deepseek-chat?content=Apa%20itu%20WANZOFC%20TECH?" class="btn btn-primary">Coba Sekarang <i class="fas fa-arrow-right"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-4 animate__animated animate__fadeInUp animate__delay-1s">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Gemini Pro AI</h5>
+                        <p class="card-text">Dapatkan jawaban dari Gemini Pro.</p>
+                        <a href="/api/ai/gemini-pro?content=Ceritakan%20tentang%20dirimu" class="btn btn-primary">Coba Sekarang <i class="fas fa-arrow-right"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-4 animate__animated animate__fadeInUp animate__delay-2s">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Meta Llama AI</h5>
+                        <p class="card-text">Berinteraksi dengan Meta Llama model.</p>
+                        <a href="/api/ai/meta-llama?content=Berikan%20contoh%20penggunaan%20AI" class="btn btn-primary">Coba Sekarang <i class="fas fa-arrow-right"></i></a>
+                    </div>
+                </div>
+            </div>
+                           <div class="col-md-4 mb-4 animate__animated animate__fadeInUp animate__delay-1s">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">DBRX Instruct AI</h5>
+                        <p class="card-text">Berinteraksi dengan DBRX Instruct model.</p>
+                        <a href="/api/ai/dbrx-instruct?content=Siapa%20Presiden%20Indonesia" class="btn btn-primary">Coba Sekarang <i class="fas fa-arrow-right"></i></a>
+                    </div>
+                </div>
+            </div>
+               <div class="col-md-4 mb-4 animate__animated animate__fadeInUp animate__delay-2s">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Deepseek R1 AI</h5>
+                        <p class="card-text">Berinteraksi dengan Deepseek R1 model.</p>
+                        <a href="/api/ai/deepseek-r1?content=Apa%20itu%20Internet" class="btn btn-primary">Coba Sekarang <i class="fas fa-arrow-right"></i></a>
+                    </div>
+                </div>
+            </div>
+              <div class="col-md-4 mb-4 animate__animated animate__fadeInUp animate__delay-2s">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Gita AI</h5>
+                        <p class="card-text">Berinteraksi dengan Gita model.</p>
+                        <a href="/api/gita?q=apa%20itu%20dosa" class="btn btn-primary">Coba Sekarang <i class="fas fa-arrow-right"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <h2 class="mt-4 animate__animated animate__fadeIn">Navigasi</h2>
+        <ul class="animate__animated animate__fadeInUp">
+            <li><a href="/kebijakan"><i class="fas fa-shield-alt"></i> Kebijakan</a></li>
+        </ul>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
+
     <script>
-        window.onload = () => {
-            SwaggerUIBundle({
-                url: '/api-docs/swagger.json', // Use the /api-docs endpoint
-                dom_id: '#swagger-ui',
-                deepLinking: true,
-                presets: [
-                    SwaggerUIBundle.presets.apis,
-                    SwaggerUIBundle.SwaggerUIStandalonePreset
-                ],
-                plugins: [
-                    SwaggerUIBundle.plugins.DownloadUrl
-                ],
-                layout: "StandaloneLayout"
+        // GSAP Animations
+        gsap.from(".jumbotron h1", { opacity: 0, duration: 1, y: -50, ease: "power3.out" });
+        gsap.from(".jumbotron p", { opacity: 0, duration: 1, y: 50, delay: 0.5, ease: "power3.out" });
+        gsap.from(".jumbotron .btn", { opacity: 0, duration: 1, delay: 1, y: 50, ease: "power3.out" });
+
+        gsap.utils.toArray(".card").forEach((card, index) => {
+            gsap.from(card, {
+                opacity: 0,
+                x: index % 2 === 0 ? -100 : 100,
+                duration: 0.75,
+                delay: 0.25 * index,
+                ease: "power2.out",
+                scrollTrigger: {
+                    trigger: card,
+                    start: "top 80%",
+                    toggleActions: "play none none reset"
+                }
             });
-        };
+        });
     </script>
+
 </body>
+
 </html>
